<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.cwru.students.nutrientbuddy.ViewNutritionActivity"
    tools:showIn="@layout/activity_view_nutrition">


    <RelativeLayout
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/recipe_name_text"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recipe Name"
            android:textSize="30dp"
            android:textStyle="bold">
        </EditText>

        <EditText
            android:id="@+id/recipe_ingredients_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/recipe_name_text"
            android:text="Ingredients"
            android:textSize="20dp">
        </EditText>

        <EditText
            android:id="@+id/recipe_directions_text"
            android:layout_width="wrap_content"
            android:layout_below="@id/recipe_ingredients_text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:text="Directions"
            android:textSize="30dp"
            android:textStyle="bold">
        </EditText>
        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/create_recipe"
            android:layout_below="@id/recipe_directions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:onClick="addRecipeToList" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
